--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,7 @@
 		</style>
 	</head>
 	<body>
-		<!-- <div class="radarChart" style="display: inline-flex;"></div> -->
+		<div class="radarChart" style="display: inline-flex;"></div>
 		<div class="radarChart2" style="display: inline-flex;"></div>
 		<script>
 			//////////////////////////////////////////////////////////////
@@ -74,14 +74,14 @@
             {axis: 'Indice de jeunesse', value: 95},
           ]
 				},
-        { name: 'Moyenne du contexte',
-          axes: [
-            {axis: 'Densité (2016)', value: 50},
-            {axis: 'Taux d\'emploi (2014)', value: 38},
-            {axis: 'PIB par habitant en parité (2014)', value: 62},
-            {axis: 'Indice de jeunesse', value: 39},
-          ]
-				}
+        // { name: 'Moyenne du contexte',
+        //   axes: [
+        //     {axis: 'Densité (2016)', value: 50},
+        //     {axis: 'Taux d\'emploi (2014)', value: 38},
+        //     {axis: 'PIB par habitant en parité (2014)', value: 62},
+        //     {axis: 'Indice de jeunesse', value: 39},
+        //   ]
+				// }
 			];
       var data = [
 				{ name: 'Allocated budget',
@@ -110,17 +110,17 @@
 			// ////// First example /////////////////////////////////////////
       // ///// (not so much options) //////////////////////////////////
 			// //////////////////////////////////////////////////////////////
-			// var radarChartOptions = {
-			//   w: 290,
-			//   h: 350,
-			//   margin: margin,
-			//   levels: 5,
-			//   roundStrokes: true,
-			// 	color: d3.scaleOrdinal().range(["#26AF32", "#762712"]),
-			// 	format: '.0f'
-			// };
-			// // Draw the chart, get a reference the created svg element :
-			// let radar1 = RadarChart(".radarChart", data, radarChartOptions);
+			var radarChartOptions = {
+			  w: 290,
+			  h: 350,
+			  margin: margin,
+			  levels: 5,
+			  roundStrokes: true,
+				color: d3.scaleOrdinal().range(["#26AF32", "#762712"]),
+				format: '.0f'
+			};
+			// Draw the chart, get a reference the created svg element :
+			let radar1 = new RadarChart(".radarChart", data, radarChartOptions);
 			//////////////////////////////////////////////////////////////
 			///// Second example /////////////////////////////////////////
 			///// Chart legend, custom color, custom unit, etc. //////////
@@ -138,7 +138,7 @@
 				unit: '%'
 			};
 			// Draw the chart, get a reference the created svg element :
-			let radar2 = RadarChart(".radarChart2", data, radarChartOptions2);
+			let radar2 = new RadarChart(".radarChart2", data2, radarChartOptions2);
 		</script>
 	</body>
 </html>
