--- a/test/index.html
+++ b/test/index.html
@@ -50,22 +50,22 @@
 						{axis: 'Indice de jeunesse', value: 81},
 					]
 				},
-				{ name: 'BE3',
-          axes: [
-            {axis: 'Densité (2016)', value: 78},
-            {axis: 'Taux d\'emploi (2014)', value: 18},
-            {axis: 'PIB par habitant en parité (2014)', value: 40},
-            {axis: 'Indice de jeunesse', value: 78},
-          ]
-				},
-        { name: 'ITG',
-          axes: [
-            {axis: 'Densité (2016)', value: 5},
-            {axis: 'Taux d\'emploi (2014)', value: 20},
-            {axis: 'PIB par habitant en parité (2014)', value: 5},
-            {axis: 'Indice de jeunesse', value: 40},
-          ]
-				},
+				// { name: 'BE3',
+        //   axes: [
+        //     {axis: 'Densité (2016)', value: 78},
+        //     {axis: 'Taux d\'emploi (2014)', value: 18},
+        //     {axis: 'PIB par habitant en parité (2014)', value: 40},
+        //     {axis: 'Indice de jeunesse', value: 78},
+        //   ]
+				// },
+        // { name: 'ITG',
+        //   axes: [
+        //     {axis: 'Densité (2016)', value: 5},
+        //     {axis: 'Taux d\'emploi (2014)', value: 20},
+        //     {axis: 'PIB par habitant en parité (2014)', value: 5},
+        //     {axis: 'Indice de jeunesse', value: 40},
+        //   ]
+				// },
         { name: 'LU0',
           axes: [
             {axis: 'Densité (2016)', value: 82},
@@ -119,7 +119,7 @@
 				color: d3.scaleOrdinal().range(["#26AF32", "#762712"]),
 				format: '.0f'
 			};
-			// Draw the chart, get a reference the created svg element :
+			// Draw the chart:
 			let radar1 = new RadarChart(".radarChart", data, radarChartOptions);
 			//////////////////////////////////////////////////////////////
 			///// Second example /////////////////////////////////////////
@@ -137,7 +137,7 @@
 				legend: { title: 'Organization XYZ', translateX: 170, translateY: 40 },
 				unit: '%'
 			};
-			// Draw the chart, get a reference the created svg element :
+			// Draw the chart:
 			let radar2 = new RadarChart(".radarChart2", data2, radarChartOptions2);
 		</script>
 	</body>
