--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
 		<!-- D3.js -->
 		<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 		<script src="https://d3js.org/d3-path.v1.min.js" charset="utf-8"></script>
-		<script src="../src/index.js" charset="utf-8"></script>
+		<script src="../dist/RadarChart.js" charset="utf-8"></script>
 		<style>
 			body {
 				font-family: 'Open Sans', sans-serif;
@@ -42,14 +42,14 @@
 			////////////////////////// Data //////////////////////////////
 			//////////////////////////////////////////////////////////////
 			var data2 = [
-				{ name: 'FRE',
-					axes: [
-						{axis: 'Densité (2016)', value: 57},
-						{axis: 'Taux d\'emploi (2014)', value: 35},
-						{axis: 'PIB par habitant en parité (2014)', value: 35},
-						{axis: 'Indice de jeunesse', value: 81},
-					]
-				},
+				// { name: 'FRE',
+				// 	axes: [
+				// 		{axis: 'Densité (2016)', value: 57},
+				// 		{axis: 'Taux d\'emploi (2014)', value: 35},
+				// 		{axis: 'PIB par habitant en parité (2014)', value: 35},
+				// 		{axis: 'Indice de jeunesse', value: 81},
+				// 	]
+				// },
 				// { name: 'BE3',
         //   axes: [
         //     {axis: 'Densité (2016)', value: 78},
@@ -58,22 +58,22 @@
         //     {axis: 'Indice de jeunesse', value: 78},
         //   ]
 				// },
-        // { name: 'ITG',
-        //   axes: [
-        //     {axis: 'Densité (2016)', value: 5},
-        //     {axis: 'Taux d\'emploi (2014)', value: 20},
-        //     {axis: 'PIB par habitant en parité (2014)', value: 5},
-        //     {axis: 'Indice de jeunesse', value: 40},
-        //   ]
-				// },
-        { name: 'LU0',
+        { name: 'ITG',
           axes: [
-            {axis: 'Densité (2016)', value: 82},
-            {axis: 'Taux d\'emploi (2014)', value: 100},
-            {axis: 'PIB par habitant en parité (2014)', value: 100},
-            {axis: 'Indice de jeunesse', value: 95},
+            {axis: 'Densité (2016)', value: 5},
+            {axis: 'Taux d\'emploi (2014)', value: 63},
+            {axis: 'PIB par habitant en parité (2014)', value: 5},
+            {axis: 'Indice de jeunesse', value: 85},
           ]
 				},
+        // { name: 'LU0',
+        //   axes: [
+        //     {axis: 'Densité (2016)', value: 82},
+        //     {axis: 'Taux d\'emploi (2014)', value: 100},
+        //     {axis: 'PIB par habitant en parité (2014)', value: 100},
+        //     {axis: 'Indice de jeunesse', value: 95},
+        //   ]
+				// },
         // { name: 'Moyenne du contexte',
         //   axes: [
         //     {axis: 'Densité (2016)', value: 50},
@@ -135,7 +135,8 @@
 			  color: d3.scaleOrdinal().range(["yellow", "blue", "gray", "green"]),
 				format: '.0f',
 				legend: { title: 'Organization XYZ', translateX: 170, translateY: 40 },
-				unit: '%'
+				unit: '%',
+				allowInverseData: true
 			};
 			// Draw the chart:
 			let radar2 = new RadarChart(".radarChart2", data2, radarChartOptions2);
