use es6 class syntax

--- a/test/index.html
+++ b/test/index.html
@@ -42,46 +42,46 @@
 			////////////////////////// Data //////////////////////////////
 			//////////////////////////////////////////////////////////////
 			var data2 = [
-				// { name: 'FRE',
-				// 	axes: [
-				// 		{axis: 'Densité (2016)', value: 57},
-				// 		{axis: 'Taux d\'emploi (2014)', value: 35},
-				// 		{axis: 'PIB par habitant en parité (2014)', value: 35},
-				// 		{axis: 'Indice de jeunesse', value: 81},
-				// 	]
-				// },
-				// { name: 'BE3',
-        //   axes: [
-        //     {axis: 'Densité (2016)', value: 78},
-        //     {axis: 'Taux d\'emploi (2014)', value: 18},
-        //     {axis: 'PIB par habitant en parité (2014)', value: 40},
-        //     {axis: 'Indice de jeunesse', value: 78},
-        //   ]
-				// },
-        { name: 'ITG',
+				{ name: 'FRE',
+					axes: [
+						{axis: 'Densité (2016)', value: 57},
+						{axis: 'Taux d\'emploi (2014)', value: 35},
+						{axis: 'PIB par habitant en parité (2014)', value: 35},
+						{axis: 'Indice de jeunesse', value: 81},
+					]
+				},
+				{ name: 'BE3',
           axes: [
-            {axis: 'Densité (2016)', value: 5},
-            {axis: 'Taux d\'emploi (2014)', value: 63},
-            {axis: 'PIB par habitant en parité (2014)', value: 5},
-            {axis: 'Indice de jeunesse', value: 85},
+            {axis: 'Densité (2016)', value: 78},
+            {axis: 'Taux d\'emploi (2014)', value: 18},
+            {axis: 'PIB par habitant en parité (2014)', value: 40},
+            {axis: 'Indice de jeunesse', value: 78},
           ]
 				},
-        // { name: 'LU0',
+        // { name: 'ITG',
         //   axes: [
-        //     {axis: 'Densité (2016)', value: 82},
-        //     {axis: 'Taux d\'emploi (2014)', value: 100},
-        //     {axis: 'PIB par habitant en parité (2014)', value: 100},
-        //     {axis: 'Indice de jeunesse', value: 95},
+        //     {axis: 'Densité (2016)', value: 5},
+        //     {axis: 'Taux d\'emploi (2014)', value: 63},
+        //     {axis: 'PIB par habitant en parité (2014)', value: 5},
+        //     {axis: 'Indice de jeunesse', value: 85},
         //   ]
 				// },
-        // { name: 'Moyenne du contexte',
-        //   axes: [
-        //     {axis: 'Densité (2016)', value: 50},
-        //     {axis: 'Taux d\'emploi (2014)', value: 38},
-        //     {axis: 'PIB par habitant en parité (2014)', value: 62},
-        //     {axis: 'Indice de jeunesse', value: 39},
-        //   ]
-				// }
+        { name: 'LU0',
+          axes: [
+            {axis: 'Densité (2016)', value: 82},
+            {axis: 'Taux d\'emploi (2014)', value: 100},
+            {axis: 'PIB par habitant en parité (2014)', value: 100},
+            {axis: 'Indice de jeunesse', value: 95},
+          ]
+				},
+        { name: 'Moyenne du contexte',
+          axes: [
+            {axis: 'Densité (2016)', value: 50},
+            {axis: 'Taux d\'emploi (2014)', value: 38},
+            {axis: 'PIB par habitant en parité (2014)', value: 62},
+            {axis: 'Indice de jeunesse', value: 39},
+          ]
+				},
 			];
       var data = [
 				{ name: 'Allocated budget',
